--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   "bugs": {
     "url": "https://github.com/thesidshah/famjam.git/issues"
   },
-  "homepage": "https://github.com/thesidshah/famjam.git#readme",
+  "homepage": "https://github.com/thesidshah/famjam.gitN#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "googleapis": "^100.0.0",
     "mongoose": "^6.2.10",
+    "node-fetch": "2.0",
     "nodemon": "^2.0.15"
   }
 }
