--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Node.js HTTP Web server for the FamJam application",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
